.food-list added overflow-y, fix paddings

--- a/app/components/menu/_index.scss
+++ b/app/components/menu/_index.scss
@@ -3,7 +3,7 @@
 .menu {
   display: flex;
   flex-flow: column nowrap;
-  width: 18%;
+  width: 15%;
     &-title {
       font-family: 'Lobster';
       margin-bottom: 5%;
@@ -11,7 +11,7 @@
     }
     &-item {
       font-family: 'Comfortaa';
-      font-size: 16px;
+      font-size: 18px;
       text-align: center;
       padding: 10px 0;
       margin: 1.5% 0;
